# NopExamples

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  clean.sh  meson.sh
.github/workflows/: cross.yml  freebsd.yml  linux.yml  macos.yml  windows.yml
01_log-catching/: LcSupervising.cpp  LcSupervising.h  LogCatching.cpp  LogCatching.h  main.cpp  meson.build
01_log-catching/scripts/: sigSource.sh  sigUsr1.sh  test.sh
02_NopOS/: Makefile
02_NopOS/doc/: notes.txt
02_NopOS/main/: LibcCustom.cpp  LibcCustom.h  boot2.cpp  boot2.ld  start2.s
02_NopOS/tools/: post.sh
03_meson-hello/: main.cpp  meson.build
04_depCheck/doc/: notes.txt
04_dictionary/: hu-de.txt
doc/SystemCore/system/collect-dist/: cd-1.pu
doc/SystemCore/system/replacing/: breaking_pub.pu
doc/notes/: notes-wsl.txt
doc/system/FileExecuting/: build.sh
doc/system/collect-dist/: cd-2.pu
doc/system/core-structure/: composite-pattern-compared.pu
doc/system/definitions/: life.pu  recursion.pu  resistance.pu
doc/system/replacing/: breaking_priv.pu  breaking_pub.pu  replacing.pu
doc/system/vulkan/: abstraction-vulkan.pu  vulkan-abstraction.pu
docker/: build.sh  run.sh
t01_tcp-echo-server/: CMakeLists.txt  Makefile  README.md  Supervising.cpp  UserInteracting.cpp  UserInteracting.h  env.h  main.cpp  meson.build
t02_multithreading-mandelbrot/: CMakeLists.txt  LibBmp.cpp  LibBmp.h  LibMandel.cpp  LibMandel.h  Makefile  MandelBlockFilling.cpp  MandelBlockFilling.h  MandelbrotCreating.cpp  MandelbrotCreating.h  README.md  Supervising.cpp  Supervising.h  UserInteracting.cpp  UserInteracting.h  env.h  main.cpp  meson.build  valgrind_suppressions.txt
t02_multithreading-mandelbrot/doc/SystemCore/system/collect-dist/: notes-copyright.txt
t02_multithreading-mandelbrot/doc/SystemCore/system/replacing/: breaking_pub.pu  replacing.pu
t02_multithreading-mandelbrot/vulkan/: DeviceVulkan.cpp  DeviceVulkan.h  LibVulkan.cpp  LibVulkan.h  StrctVlkCreating.cpp  StrctVlkCreating.h  StructComputing.cpp  StructComputing.h  VulkanComputing.cpp  VulkanComputing.h
t03_log-catching/: CMakeLists.txt  LcSupervising.cpp  LogCatching.cpp  LogCatching.h  Makefile  Supervising.cpp  Supervising.h  env.h  main.cpp  meson.build
t03_log-catching/scripts/: sigKill.sh
tools-dev/_archive/: meson.sh
tools-dev/info/: listing.sh
tools-dev/start/: callgrind1.sh  callgrind2.sh  default.sh  massif1.sh  massif2.sh  valgrind.sh
